--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a {
 .checkout span:first-child {
   margin-left: 23px;
 }
-.wrapper>h1 {
+.header h1 {
   font-size: 23px;
   float: left;
   color: #67686d;
@@ -133,9 +133,62 @@ a {
   color: #7e7f84;
 }
 .slider {
+  position: relative;
+  text-align: center;
   z-index: 1;
   background-color: #e3e3e3;
-  height: 660px;
+  height: 443px;
+  color: #ffffff;
+  padding-top: 217px;
+}
+.text {
+  display: inline-block;
+  float: left;
+  text-align: left;
+  width: 470px;
+}
+.text h1 {
+  font-size: 59px;
+  font-weight: lighter;
+}
+.text p {
+  font-size: 14px;
+  line-height: 20px;
+}
+.text input {
+  background-color: #f45a40;
+  border: none;
+  padding: 13px 22px;
+  color: #ffffff;
+  font-size: 14px;
+  margin-top: 23px;
+}
+
+.slide_dott {
+  position: absolute;
+  width: 110px;
+  list-style-type: none;
+  height: 20px;
+  bottom: 120px;
+  left: 48%;
+}
+.slide_dott li {
+  display: inline-block;
+  width: 19px;
+  height: 20px;
+}
+.slide_dott span {
+  display: block;
+  width: 10px;
+  height: 10px;
+  border: 2px solid #ffffff;
+  background-color: #e3e3e3;
+  border-radius: 50%;
+}
+.slide_dott span.slide_current {
+  background-color: #ffffff;
+  box-shadow: 0 2px 3px #b0b0b0;
+
 }
 .content {
   margin-top: 64px;
@@ -405,6 +458,35 @@ a {
   position: absolute;
   bottom: 21px;
   right: 20px;
+}
+
+.map span {
+  position: absolute;
+  width:32px;
+  height: 32px;
+  background-color: #2a2d34;
+  color: #ffffff;
+  font-size: 17px;
+  text-align: center;
+
+}
+.plus {
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  top: 30px;
+  left: 30px;
+}
+.minus {
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  top: 64px;
+  left: 30px;
+}
+.plus p {
+  padding-top: 5px;
+}
+.map span:hover {
+  background-color: #f45a40;
 }
 .sign_up{
   background-color: #f45a40;
