--- a/css/style.css
+++ b/css/style.css
@@ -229,13 +229,34 @@ a {
   margin-top: 65px;
   position: relative;
 }
+.arrow {
+  position: absolute;
+  width: 42px;
+  height: 28px;
+  background-color: #ffffff;
+  color: #a8a9ac;
+  z-index: 5;
+  padding-top: 14px;
+  font-size: 14px;
+}
+.left {
+  top: 260px;
+  left: -16px;
+  border-radius: 50%;
+
+}
+.right {
+  top: 260px;
+  right: -16px;
+  border-radius: 50%;
+}
 .popular > h1{
   font-weight: 100;
   font-size: 22px;
   color: #67686d;
   margin-bottom: 35px;
 }
-.popular>span {
+.line {
   position:absolute;
   display: inline-block;
   width: 155px;
@@ -244,7 +265,7 @@ a {
   top:11px;
   left:705px;
 }
-.popular > span:first-child {
+.line:first-child {
   left:300px;
 }
 .pop_products {
@@ -494,6 +515,7 @@ a {
   padding: 30px 0;
 }
 .sign_up h1 {
+  float: left;
   display: inline-block;
   color: #ffffff;
   font-size: 23px;
